# claude_code_proxy

./: .gitignore  Cargo.toml  set_env.ps1  set_env.sh
config/: config.toml  openai.toml.example  openrouter.toml.example  vertexai.toml.example
src/: main.rs
src/api/: endpoints.rs  mod.rs
src/conversion/: mod.rs  request_converter.rs  response_converter.rs
src/core/: client.rs  config.rs  constants.rs  logging.rs  mod.rs  model_manager.rs  provider.rs
src/core/providers/: mod.rs  openai.rs  openrouter.rs  vertexai.rs
src/models/: claude.rs  mod.rs  openai.rs
